Added goodness of fit method.

--- a/partitioner.ipynb
+++ b/partitioner.ipynb
@@ -17,9 +17,7 @@
     "$\\cdot$ Incorporate parsing support for other languages. <br>\n",
     "$\\cdot$ Comment the hell out of your code <br>\n",
     "$\\cdot$ Build support for TDMs. <br>\n",
-    "$\\cdot$ Make lots of examples for the different kinds of functionality. <br>\n",
-    "$\\cdot$ Build methods for the Zipf/Simon goodness of fit. <br>\n",
-    "$\\cdot$ Get this up on github."
+    "$\\cdot$ Make lots of examples for the different kinds of functionality. <br>"
    ]
   },
   {
@@ -31,22 +29,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
+    "%reload_ext autoreload\n",
     "%autoreload 2"
    ]
   },
@@ -59,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -230,11 +219,46 @@
     "            text = re.sub(\"\\\\n\",\"\\n\",text)\n",
     "            text = re.sub(\"\\\\t\",\"\\t\",text)\n",
     "        return text\n",
-    "                \n",
+    "    \n",
+    "    def testFit(self):\n",
+    "        if self.method == \"stochastic\":\n",
+    "            print(\"Can't test fit goodness on stochastic partitions!\")\n",
+    "            sys.exit()\n",
+    "        else:\n",
+    "            self.rsq = \"NA\"\n",
+    "            sizes = {}\n",
+    "            for phrase in self.counts:\n",
+    "                count = self.counts[phrase]\n",
+    "                sizes.setdefault(count,0)\n",
+    "                sizes[count] += 1\n",
+    "            pairs = [[size,sizes[size]] for size in sizes]\n",
+    "            N = 0.0\n",
+    "            M = 0.0\n",
+    "            cumNumbers = []\n",
+    "            cumSizes = []\n",
+    "            for size,number in sorted(pairs,key=lambda x: x[0],reverse=True):\n",
+    "                N += float(number)\n",
+    "                M += float(size)*float(number)\n",
+    "                cumNumbers.append(N)\n",
+    "                cumSizes.append(float(size))\n",
+    "            if M:\n",
+    "                ## Zipf/Simon model fit:\n",
+    "                m = -(1. - N/M)\n",
+    "                b = -m*ma.log(N,10)\n",
+    "                f = [(ma.log(cumSizes[i],10)-b)/m for i in range(len(cumSizes))]\n",
+    "                r = [ma.log(cumNumbers[i],10) - f[i] for i in range(len(cumNumbers))]\n",
+    "                fmean = sum(f)/float(len(f))\n",
+    "                mss = sum([(f[i] - fmean)**2.0 for i in range(len(f))])\n",
+    "                rss = sum([r[i]**2.0 for i in range(len(r))])\n",
+    "                self.rsq = mss/(mss + rss)\n",
+    "            else:\n",
+    "                print(\"There's no data on which to test a fit!\")\n",
+    "                sys.exit()\n",
+    "            \n",
     "    def partitionText(self,text = \"\", textfile = \"NA\"):\n",
     "        ## set things up\n",
     "        reg = re.compile(\"((\\#|\\@)?[a-zA-Z]+((\\'|\\-)[a-zA-Z]+)*\\'?[ ]?)+\")\n",
-    "        counts = {}\n",
+    "        self.counts = {}\n",
     "        if textfile != \"NA\":\n",
     "            try:\n",
     "                with open(textfile, \"r\") as f:\n",
@@ -250,15 +274,14 @@
     "                partition = self.stochastic(clause)\n",
     "                ## here, partition is a dictionary\n",
     "                for phrase in partition:\n",
-    "                    counts.setdefault(phrase,0.)\n",
-    "                    counts[phrase] += partition[phrase]\n",
+    "                    self.counts.setdefault(phrase,0.)\n",
+    "                    self.counts[phrase] += partition[phrase]\n",
     "            elif self.method == \"oneoff\":\n",
     "                partition = self.oneoff(clause)\n",
     "                ## here, partition is a list\n",
     "                for phrase in partition:\n",
-    "                    counts.setdefault(phrase,0.)\n",
-    "                    counts[phrase] += 1.\n",
-    "        return counts\n",
+    "                    self.counts.setdefault(phrase,0.)\n",
+    "                    self.counts[phrase] += 1.\n",
     "\n",
     "    def stochastic(self, clause):\n",
     "        words = re.split(\" \", clause)\n",
@@ -351,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -406,7 +429,14 @@
     "## Vignette 5: An informed, stochastic partition of a single clause\n",
     "def uniformStochasticPartition(informed = False, clause = \"How are you doing today?\", qunif = 0.25):\n",
     "    pa = partitioner(informed = informed, qunif = qunif)\n",
-    "    print pa.stochastic(clause)"
+    "    print pa.stochastic(clause)\n",
+    "    \n",
+    "## Vignette 6: Use the default partitioning method to partition the main partitioner.py file and compute rsq\n",
+    "def testPartitionTextAndFit():\n",
+    "    pa = partitioner()\n",
+    "    pa.partitionText(textfile = \"partitioner.py\")\n",
+    "    pa.testFit()\n",
+    "    print pa.rsq"
    ]
   },
   {
