Broke module down and subclassed partitioner by those in methods.py.

--- a/partitioner.ipynb
+++ b/partitioner.ipynb
@@ -15,7 +15,7 @@
     "## To Do\n",
     "$\\cdot$ Collect and preprocess other language dictionarys. <br>\n",
     "$\\cdot$ Incorporate parsing support for other languages. <br>\n",
-    "$\\cdot$ Comment the hell out of your code <br>\n",
+    "$\\cdot$ Comment the hell out of code <br>\n",
     "$\\cdot$ Build support for TDMs. <br>\n",
     "$\\cdot$ Make lots of examples for the different kinds of functionality. <br>"
    ]
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -57,42 +57,60 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting partitioner.py\n"
+      "Overwriting ./partitioner/__init__.py\n"
      ]
     }
    ],
    "source": [
-    "%%writefile partitioner.py\n",
-    "import re, sys, json\n",
+    "%%writefile ./partitioner/__init__.py\n",
+    "__all__ = ['partitioner','methods']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ./partitioner/partitioner.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile ./partitioner/partitioner.py\n",
+    "import re, sys, json, os\n",
     "import math as ma\n",
     "import random as ra\n",
     "import itertools as it\n",
-    "class partitioner:\n",
     "\n",
+    "class partitioner:\n",
+    "    \n",
     "    def __init__(self, \n",
     "                 informed = True, \n",
     "                 qunif = 0.5, \n",
-    "                 method = 'oneoff', \n",
     "                 dictionary = \"NA\", \n",
     "                 qsname = \"enwiktionary\",\n",
     "                 case = False,\n",
     "                 URLS = False,\n",
     "                 hashtags = False,\n",
     "                 handles = False,\n",
-    "                 markup = False\n",
+    "                 markup = False,\n",
+    "                 seed = None\n",
     "                ):\n",
+    "        self.home = os.path.dirname(os.path.realpath(__file__))\n",
+    "        self.seed = seed\n",
+    "        ra.seed(self.seed)\n",
     "        self.case = case\n",
     "        self.URLS = URLS\n",
     "        self.hashtags = hashtags\n",
     "        self.handles = handles\n",
     "        self.markup = markup        \n",
     "        self.informed = informed\n",
-    "        self.methods = [\"oneoff\", \"stochastic\"]\n",
-    "        self.method = method\n",
-    "        if method != \"oneoff\" and method != \"stochastic\":\n",
-    "            print(self.method+\" is not a supported partitioning method!\")\n",
-    "            print(\"Please try one of: \"+\", \".join(methods))\n",
-    "            sys.exit()            \n",
     "        self.qunif = qunif\n",
     "        self.dictionary = dictionary\n",
     "        self.qsname = qsname\n",
@@ -111,7 +129,7 @@
     "            return 1.0\n",
     "\n",
     "    def dumpqs(self, qsname):\n",
-    "        with open(\"./qdumps/\"+qsname+\".json\",\"w\") as f:\n",
+    "        with open(self.home+\"/../qdumps/\"+qsname+\".json\",\"w\") as f:\n",
     "            f.writelines(json.dumps(self.qs))\n",
     "\n",
     "    def loadqs(self, dictionary = \"NA\", qsname = \"enwiktionary\"):\n",
@@ -120,11 +138,11 @@
     "        if self.dictionary == \"NA\":\n",
     "            ## add switch here to check if preprocessed set exists\n",
     "            try:\n",
-    "                with open(\"./qdumps/\"+self.qsname+\".json\",\"r\") as f:\n",
+    "                with open(self.home+\"/../qdumps/\"+self.qsname+\".json\",\"r\") as f:\n",
     "                    self.qs = json.loads(f.read().strip())\n",
     "            except IOError:\n",
     "                print(\"Preprocessed probabilities for \"+self.qsname+\" have not yet been created!\")\n",
-    "                print(\"Place preprocessed probabilities in partitioner/qdumps/,\")\n",
+    "                print(\"Place preprocessed probabilities in partitionerPATH/qdumps/,\")\n",
     "                print(\"or load from a dictionay and run partitioner.dumpqs(qsname).\")\n",
     "                sys.exit()\n",
     "        else:\n",
@@ -221,39 +239,35 @@
     "        return text\n",
     "    \n",
     "    def testFit(self):\n",
-    "        if self.method == \"stochastic\":\n",
-    "            print(\"Can't test fit goodness on stochastic partitions!\")\n",
-    "            sys.exit()\n",
+    "        self.rsq = \"NA\"\n",
+    "        sizes = {}\n",
+    "        for phrase in self.counts:\n",
+    "            count = self.counts[phrase]\n",
+    "            sizes.setdefault(count,0)\n",
+    "            sizes[count] += 1\n",
+    "        pairs = [[size,sizes[size]] for size in sizes]\n",
+    "        N = 0.0\n",
+    "        M = 0.0\n",
+    "        cumNumbers = []\n",
+    "        cumSizes = []\n",
+    "        for size,number in sorted(pairs,key=lambda x: x[0],reverse=True):\n",
+    "            N += float(number)\n",
+    "            M += float(size)*float(number)\n",
+    "            cumNumbers.append(N)\n",
+    "            cumSizes.append(float(size))\n",
+    "        if M:\n",
+    "            ## Zipf/Simon model fit:\n",
+    "            m = -(1. - N/M)\n",
+    "            b = -m*ma.log(N,10)\n",
+    "            f = [(ma.log(cumSizes[i],10)-b)/m for i in range(len(cumSizes))]\n",
+    "            r = [ma.log(cumNumbers[i],10) - f[i] for i in range(len(cumNumbers))]\n",
+    "            fmean = sum(f)/float(len(f))\n",
+    "            mss = sum([(f[i] - fmean)**2.0 for i in range(len(f))])\n",
+    "            rss = sum([r[i]**2.0 for i in range(len(r))])\n",
+    "            self.rsq = mss/(mss + rss)\n",
     "        else:\n",
-    "            self.rsq = \"NA\"\n",
-    "            sizes = {}\n",
-    "            for phrase in self.counts:\n",
-    "                count = self.counts[phrase]\n",
-    "                sizes.setdefault(count,0)\n",
-    "                sizes[count] += 1\n",
-    "            pairs = [[size,sizes[size]] for size in sizes]\n",
-    "            N = 0.0\n",
-    "            M = 0.0\n",
-    "            cumNumbers = []\n",
-    "            cumSizes = []\n",
-    "            for size,number in sorted(pairs,key=lambda x: x[0],reverse=True):\n",
-    "                N += float(number)\n",
-    "                M += float(size)*float(number)\n",
-    "                cumNumbers.append(N)\n",
-    "                cumSizes.append(float(size))\n",
-    "            if M:\n",
-    "                ## Zipf/Simon model fit:\n",
-    "                m = -(1. - N/M)\n",
-    "                b = -m*ma.log(N,10)\n",
-    "                f = [(ma.log(cumSizes[i],10)-b)/m for i in range(len(cumSizes))]\n",
-    "                r = [ma.log(cumNumbers[i],10) - f[i] for i in range(len(cumNumbers))]\n",
-    "                fmean = sum(f)/float(len(f))\n",
-    "                mss = sum([(f[i] - fmean)**2.0 for i in range(len(f))])\n",
-    "                rss = sum([r[i]**2.0 for i in range(len(r))])\n",
-    "                self.rsq = mss/(mss + rss)\n",
-    "            else:\n",
-    "                print(\"There's no data on which to test a fit!\")\n",
-    "                sys.exit()\n",
+    "            print(\"There's no data on which to test a fit!\")\n",
+    "            sys.exit()\n",
     "            \n",
     "    def partitionText(self,text = \"\", textfile = \"NA\"):\n",
     "        ## set things up\n",
@@ -270,20 +284,53 @@
     "        ## count the words/phrases\n",
     "        for clause in reg.finditer(text):\n",
     "            clause = clause.group()\n",
-    "            if self.method == \"stochastic\":\n",
-    "                partition = self.stochastic(clause)\n",
-    "                ## here, partition is a dictionary\n",
+    "            partition = self.partition(clause)\n",
+    "            if type(partition) is dict:\n",
     "                for phrase in partition:\n",
     "                    self.counts.setdefault(phrase,0.)\n",
     "                    self.counts[phrase] += partition[phrase]\n",
-    "            elif self.method == \"oneoff\":\n",
-    "                partition = self.oneoff(clause)\n",
-    "                ## here, partition is a list\n",
+    "            else:\n",
     "                for phrase in partition:\n",
     "                    self.counts.setdefault(phrase,0.)\n",
     "                    self.counts[phrase] += 1.\n",
+    "                    \n",
+    "    def partition(self, text = \"\", textfile = \"NA\"):\n",
+    "        print(\"Partition method not yet set!\")\n",
+    "        print(\"To partition text, import and run 'oneoff' or 'stochastic'.\")\n",
+    "        sys.exit()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ./partitioner/methods.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile ./partitioner/methods.py\n",
+    "import re, sys, json, os\n",
+    "import math as ma\n",
+    "import random as ra\n",
+    "import itertools as it\n",
+    "from partitioner import partitioner\n",
     "\n",
-    "    def stochastic(self, clause):\n",
+    "class stochastic(partitioner):\n",
+    "    \n",
+    "    def testFit(self):\n",
+    "        print(\"Can't test fit goodness on non-deterministic partitions!\")\n",
+    "        print(\"Import and run 'oneoff' to test goodness of fit.\")\n",
+    "        sys.exit()\n",
+    "    \n",
+    "    def partition(self, clause):\n",
     "        words = re.split(\" \", clause)\n",
     "        counts = {}\n",
     "        if self.informed:\n",
@@ -339,8 +386,10 @@
     "                else:\n",
     "                    fq = 0.    \n",
     "        return counts\n",
+    "\n",
+    "class oneoff(partitioner):\n",
     "    \n",
-    "    def oneoff(self, clause):\n",
+    "    def partition(self, clause):\n",
     "        partition = []\n",
     "        words = clause.split(\" \")\n",
     "        length = len(words)\n",
@@ -374,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -383,13 +432,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting examples.py\n"
+      "Overwriting ./examples/examples.py\n"
      ]
     }
    ],
    "source": [
-    "%%writefile examples.py\n",
+    "%%writefile ./examples/examples.py\n",
     "from partitioner import partitioner\n",
+    "from partitioner.methods import *\n",
     "## This file scripts partitioner examples,\n",
     "## which are to be run as standalone vignettes\n",
     "## exhibiting partitioner's functionality\n",
@@ -404,37 +454,37 @@
     "##       occurs in the partitionText method. \n",
     "##       Because of this, \n",
     "##       it is unwise to pass large, uncleaned pieces of text as 'clauses' \n",
-    "##       through the .oneoff() or .stochastic() methods,\n",
-    "##       as these will simply tokenize the text by splitting on \" \", \n",
+    "##       directly through the .partition() method (regardless of the type of partition being taken),\n",
+    "##       as this will simply tokenize the text by splitting on \" \", \n",
     "##       producing many long, punctuation-filled phrases, \n",
     "##       and likely run very slow.\n",
-    "##       As such, best practices only use .oneoff() and .stochastic()\n",
-    "##       for testing and exploring the tool.\n",
+    "##       As such, best practices only use .partition()\n",
+    "##       for testing and exploring the tool on case-interested clauses.\n",
     "    \n",
     "## Vignette 2: An informed, one-off partition of a single clause\n",
     "def informedOneOffPartition(clause = \"How are you doing today?\"):\n",
-    "    pa = partitioner()\n",
-    "    print pa.oneoff(clause)\n",
+    "    pa = oneoff()\n",
+    "    print pa.partition(clause)\n",
     "\n",
     "## Vignette 3: An informed, stochastic partition of a single clause\n",
     "def informedStochasticPartition(clause = \"How are you doing today?\"):\n",
-    "    pa = partitioner()\n",
-    "    print pa.stochastic(clause)\n",
+    "    pa = stochastic()\n",
+    "    print pa.partition(clause)\n",
     "    \n",
     "## Vignette 4: An uniform, one-off partition of a single clause\n",
     "def uniformOneOffPartition(informed = False, clause = \"How are you doing today?\", qunif = 0.25):\n",
-    "    pa = partitioner(informed = informed, qunif = qunif)\n",
-    "    print pa.oneoff(clause)\n",
+    "    pa = oneoff(informed = informed, qunif = qunif)\n",
+    "    print pa.partition(clause)\n",
     "\n",
     "## Vignette 5: An informed, stochastic partition of a single clause\n",
     "def uniformStochasticPartition(informed = False, clause = \"How are you doing today?\", qunif = 0.25):\n",
-    "    pa = partitioner(informed = informed, qunif = qunif)\n",
-    "    print pa.stochastic(clause)\n",
+    "    pa = stochastic(informed = informed, qunif = qunif)\n",
+    "    print pa.partition(clause)\n",
     "    \n",
     "## Vignette 6: Use the default partitioning method to partition the main partitioner.py file and compute rsq\n",
     "def testPartitionTextAndFit():\n",
-    "    pa = partitioner()\n",
-    "    pa.partitionText(textfile = \"partitioner.py\")\n",
+    "    pa = oneoff()\n",
+    "    pa.partitionText(textfile = pa.home+\"/partitioner.py\")\n",
     "    pa.testFit()\n",
     "    print pa.rsq"
    ]
