expanded support for 12 languages: fr, de, es, pt, it, sv, el, fi, en, ru, nl, and pl

--- a/tests/partitioner_examples.ipynb
+++ b/tests/partitioner_examples.ipynb
@@ -11,9 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -46,9 +46,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -253,7 +253,8 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -292,6 +293,199 @@
    ],
    "source": [
     "testPartitionTextAndFit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Process the some other Wiktionaries to generate the partition probabilities.\n",
+    "Note: These dictionaries are not as well curated and potentially contain phrases from other languages (a consequence of wiktionary construction). As a result, they hold many many more phrases and will take longer to process. However, since the vast majority of these dictionaries are language-correct, effects on the partitioner and its (course) partition probabilities is likely negligable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "## Vignette X1: Build informed partition data from other dictionaries, \n",
+    "##             and store to local collection\n",
+    "def preprocessOtherWiktionaries():\n",
+    "    for lang in [\"ru\", \"pt\", \"pl\", \"nl\", \"it\", \"fr\", \"fi\", \"es\", \"el\", \"de\", \"en\"]:\n",
+    "        print \"working on \"+lang+\"...\"\n",
+    "        pa = partitioner(informed = True, dictionary = \"./dictionaries/\"+lang+\".txt\")\n",
+    "        pa.dumpqs(qsname=lang)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "working on ru...\n",
+      "working on pt...\n",
+      "working on pl...\n",
+      "working on nl...\n",
+      "working on it...\n",
+      "working on fr...\n",
+      "working on fi...\n",
+      "working on es...\n",
+      "working on el...\n",
+      "working on de...\n",
+      "working on en...\n"
+     ]
+    }
+   ],
+   "source": [
+    "preprocessOtherWiktionaries()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test partitioner on some other languages."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from partitioner import partitioner\n",
+    "from partitioner.methods import *\n",
+    "## Vignette X2: Use the default partitioning method to partition the main partitioner.py file and compute rsq\n",
+    "def testFrPartitionTextAndFit():\n",
+    "    for lang in [\"ru\", \"pt\", \"pl\", \"nl\", \"it\", \"fr\", \"fi\", \"es\", \"el\", \"de\", \"en\"]:\n",
+    "        pa = oneoff(qsname = lang)\n",
+    "        pa.partitionText(textfile = \"./tests/test_\"+lang+\".txt\")\n",
+    "        pa.testFit()\n",
+    "        print\n",
+    "        print lang+\" R-squared: \",round(pa.rsq,2)\n",
+    "        print\n",
+    "        phrases = sorted(pa.counts, key = lambda x: pa.counts[x], reverse = True)\n",
+    "        for j in range(5):\n",
+    "            phrase = phrases[j]\n",
+    "            print phrase, pa.counts[phrase]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "ru R-squared:  0.07\n",
+      "\n",
+      "и 328.0\n",
+      "въ 204.0\n",
+      "я 126.0\n",
+      "е 106.0\n",
+      "на 101.0\n",
+      "\n",
+      "pt R-squared:  0.75\n",
+      "\n",
+      "de 470.0\n",
+      "e 265.0\n",
+      "que 243.0\n",
+      "da 234.0\n",
+      "a 193.0\n",
+      "\n",
+      "pl R-squared:  0.04\n",
+      "\n",
+      "i 40.0\n",
+      "Illustration 26.0\n",
+      "się 23.0\n",
+      "z 20.0\n",
+      "w 18.0\n",
+      "\n",
+      "nl R-squared:  0.74\n",
+      "\n",
+      "ik 980.0\n",
+      "een 741.0\n",
+      "dat 705.0\n",
+      "van 644.0\n",
+      "de 634.0\n",
+      "\n",
+      "it R-squared:  0.7\n",
+      "\n",
+      "e 6646.0\n",
+      "che 5656.0\n",
+      "di 5393.0\n",
+      "a 3873.0\n",
+      "il 3692.0\n",
+      "\n",
+      "fr R-squared:  0.87\n",
+      "\n",
+      "et 2001.0\n",
+      "a 1486.0\n",
+      "de 1333.0\n",
+      "les 1139.0\n",
+      "des 1060.0\n",
+      "\n",
+      "fi R-squared:  0.31\n",
+      "\n",
+      "ja 246.0\n",
+      "oli 150.0\n",
+      "hän 147.0\n",
+      "Lopo 109.0\n",
+      "että 88.0\n",
+      "\n",
+      "es R-squared:  0.67\n",
+      "\n",
+      "de 1981.0\n",
+      "y 1651.0\n",
+      "que 1311.0\n",
+      "el 698.0\n",
+      "en 684.0\n",
+      "\n",
+      "el R-squared:  0.6\n",
+      "\n",
+      "να 332.0\n",
+      "του 253.0\n",
+      "τον 250.0\n",
+      "και 205.0\n",
+      "ΟΙΔΙΠΟΥΣ 192.0\n",
+      "\n",
+      "de R-squared:  0.77\n",
+      "\n",
+      "und 2691.0\n",
+      "die 2521.0\n",
+      "der 2282.0\n",
+      "zu 2145.0\n",
+      "sie 1702.0\n",
+      "\n",
+      "en R-squared:  0.91\n",
+      "\n",
+      "and 3691.0\n",
+      "the 2838.0\n",
+      "that 1556.0\n",
+      "of 1472.0\n",
+      "to 1358.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "testFrPartitionTextAndFit()"
    ]
   },
   {
