updated the README.md file and a few examples in a notebook.

--- a/todo.txt
+++ b/todo.txt
@@ -3,7 +3,7 @@
 [ ] convert html entities into wysiwyg
 [ ] create a strong README.md file
 [ ] update all of the tests
-[ ] update the setup file
+[x] update the setup file
 [ ] make a jupyter notebook highlighting examples
 
 [x] separate the new DIMSUM from the STREUSLE data as sources
