--- a/partitioner_examples.ipynb
+++ b/partitioner_examples.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "# Example usages of the partitioner module \n",
-    "### JRW, 4/19/2017"
+    "### JRW, 4/19/2017\n",
+    "To load the module, run:"
    ]
   },
   {
@@ -23,8 +24,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Default \n",
-    "This loads partitioner with all english data and runs the full MWEs algorithm described in https://arxiv.org/pdf/1608.02025.pdf"
+    "### Set up\n",
+    "Note that partitioner utilized relatively-large training data files. Thus, this module will likely not be downloaded with any data (e.g., if downloaded from `pip`). If this is the case, training data may be downloaded through the `.download()` method. Note that this will initiate a prompt, to which a response is required."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "pa = partitioner()\n",
+    "pa.download()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### High-performance English model\n",
+    "Once the training data has been downloaded, the following will load all English data sets. This requires significant memory resources, but results in a high-performance (see https://arxiv.org/pdf/1608.02025.pdf for details) model:"
    ]
   },
   {
@@ -58,7 +77,7 @@
     }
    ],
    "source": [
-    "pa = partitioner()\n",
+    "pa = partitioner(language = \"en\", doPOS = True, doLFD = True, q = {\"type\": 0.77, \"POS\": 0.71})\n",
     "print(\"\\n\".join(pa.partition(\"How could something like this simply pop up out of the blue?\")))"
    ]
   },
